Cambio nombre propiedad de elemento y traducciones

--- a/sysadmin_base/i18n/es.po
+++ b/sysadmin_base/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-17 08:27+0000\n"
-"PO-Revision-Date: 2021-03-17 08:27+0000\n"
+"POT-Creation-Date: 2021-03-17 16:22+0000\n"
+"PO-Revision-Date: 2021-03-17 16:22+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -92,8 +92,8 @@ msgstr ""
 
 #. module: sysadmin_base
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.workspace_item_view_kanban
-msgid "<b>Count:</b>"
-msgstr "<b>Recuento:</b>"
+msgid "<b>Amount:</b>"
+msgstr "<b>Cantidad:</b>"
 
 #. module: sysadmin_base
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.workspace_workspace_view_kanban
@@ -136,6 +136,11 @@ msgid "<b>Workspaces:</b>"
 msgstr "<b>Espacios de trabajo:</b>"
 
 #. module: sysadmin_base
+#: model_terms:ir.ui.view,arch_db:sysadmin_base.view_employee_form
+msgid "<span class=\"o_stat_text\">Employee's Items</span>"
+msgstr "<span class=\"o_stat_text\">Elem. del empleado</span>"
+
+#. module: sysadmin_base
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.workspace_workspace_view_form
 msgid "<span class=\"o_stat_text\">Employees Items</span>"
 msgstr "<span class=\"o_stat_text\">Elem. de empleados</span>"
@@ -151,9 +156,9 @@ msgid "<span class=\"o_stat_text\">Items</span>"
 msgstr "<span class=\"o_stat_text\">Elementos</span>"
 
 #. module: sysadmin_base
-#: model_terms:ir.ui.view,arch_db:sysadmin_base.view_employee_form
-msgid "<span class=\"o_stat_text\">Employee's Items</span>"
-msgstr "<span class=\"o_stat_text\">Elem. del empleado</span>"
+#: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__amount
+msgid "Amount"
+msgstr "Cantidad"
 
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__cpu
@@ -165,11 +170,6 @@ msgstr ""
 #: model:ir.ui.menu,name:sysadmin_base.menu_internal_equipment_products
 msgid "Catalogue"
 msgstr "Catálogo"
-
-#. module: sysadmin_base
-#: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__count
-msgid "Count"
-msgstr "Recuento"
 
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__create_uid
@@ -219,17 +219,22 @@ msgstr "Empleado"
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_workspace__employee_count
 msgid "Employee Count"
-msgstr "Nº de empleados"
+msgstr "Recuento de empleados"
 
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_workspace__employee_item_count
 msgid "Employee Item Count"
-msgstr "Cantidad de elementos de empleados"
+msgstr "Recuento de elementos de empleados"
 
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__employee_location
 msgid "Employee location"
 msgstr "Ubicación del empleado"
+
+#. module: sysadmin_base
+#: model:res.groups,name:sysadmin_base.group_sysadmin_employee
+msgid "Employee self-management of Items"
+msgstr "Autogestión de elementos por parte de los empleados"
 
 #. module: sysadmin_base
 #: model:ir.actions.act_window,name:sysadmin_base.action_list_employees
@@ -290,7 +295,7 @@ msgstr "Equipo interno"
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_workspace__internal_item_count
 msgid "Internal Item Count"
-msgstr "Cantidad de elementos internos"
+msgstr "Recuento de elementos internos"
 
 #. module: sysadmin_base
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.view_employee_form
