--- a/sysadmin_base/i18n/es.po
+++ b/sysadmin_base/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-24 10:10+0000\n"
-"PO-Revision-Date: 2021-03-24 10:10+0000\n"
+"POT-Creation-Date: 2021-03-30 15:32+0000\n"
+"PO-Revision-Date: 2021-03-30 15:32+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -268,10 +268,10 @@ msgid "Hardware properties"
 msgstr "Propiedades de hardware"
 
 #. module: sysadmin_base
-#: model:ir.model.fields,field_description:sysadmin_base.field_hr_employee__has_dialoga_access
+#: model:ir.model.fields,field_description:sysadmin_base.field_hr_employee__has_voip_switchboard_access
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.view_employee_filter
-msgid "Has Dialoga access"
-msgstr "Tiene acceso a Dialoga"
+msgid "Has VoIP Switchboard access"
+msgstr "Tiene acceso a Centralita VoIP"
 
 #. module: sysadmin_base
 #: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__id
@@ -303,6 +303,16 @@ msgid "Internal Item Count"
 msgstr "Recuento de elementos internos"
 
 #. module: sysadmin_base
+#: model:ir.model.fields,field_description:sysadmin_base.field_workspace_item__internal_reference
+msgid "Internal Reference"
+msgstr "Referencia interna"
+
+#. module: sysadmin_base
+#: sql_constraint:workspace.item:0
+msgid "Internal Reference already exists on that item!"
+msgstr "La referencia interna de ese tipo de elemento ya existe"
+
+#. module: sysadmin_base
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.view_employee_form
 msgid "Internal Tools"
 msgstr "Herramientas internas"
@@ -318,6 +328,12 @@ msgstr "Equipo interno"
 #: model_terms:ir.ui.view,arch_db:sysadmin_base.view_employee_filter
 msgid "Is trainee"
 msgstr "En prácticas"
+
+#. module: sysadmin_base
+#: model:ir.model.fields,help:sysadmin_base.field_workspace_item__amount
+#: model_terms:ir.ui.view,arch_db:sysadmin_base.workspace_item_view_form
+msgid "It can't be lower than 0."
+msgstr "No puede ser menor de 0"
 
 #. module: sysadmin_base
 #: model:ir.model,name:sysadmin_base.model_workspace_item
